# MultiplayerProject

./: CMakeLists.txt  main.cpp
Client/: clientGame.cpp  clientNetwork.cpp
Data/Textures/Asteroids/Background Base/: asteroid_background_atlas.json
Data/Textures/Astroid/Background Base/: asteroid_background_atlas.json  asteroid_background_decor_atlas.json
Helpers/DataTypes/: vec2.h
Server/: serverGame.cpp  serverNetwork.cpp
Server/Generation/: AsteroidShapeGen.cpp
Shared/: atlas.h  atlasLoader.cpp  player.h  tile.h
Shared/Packets/: dataPackets.h  packetBuilder.h  packets.h
